[tool.poetry]
name = "openfight"
version = "0.1.3"
description = "A web scraping script for the UFC website."
authors = ["mtttech <mtaylor9754@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.32.3"
prettytable = "^3.12.0"

[tool.poetry.scripts]
openfight='openfight:openfight_main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
