[tool.poetry]
name = "Catch"
version = "0.1.5"
description = "A web scraper for the UFC website."
authors = ["mtttech <mtaylor9754@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.32.3"
prettytable = "^3.12.0"

[tool.poetry.scripts]
catch='catch:catch_main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
