[tool.poetry]
name = "Catch"
version = "0.2.2"
description = "Scrapes fighter stats from the official UFC website."
authors = ["Marcus T Taylor <mtaylor9754@hotmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
prettytable = "^3.12.0"
mysql-connector = "^2.2.9"
python-dotenv = "^1.1.0"

[tool.poetry.scripts]
catch='catch.catch:catch_main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
